--- a/package.json
+++ b/package.json
@@ -1,24 +1,23 @@
 {
   "name": "gesu",
   "version": "1.0.0",
-  "description": "",
+  "description": "Back + Front end of GESU radio",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon .",
-    "start": "node ."
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Proximitynow19/gesu.git"
+  },
   "author": "",
   "license": "ISC",
-  "dependencies": {
-    "axios": "^1.2.1",
-    "bad-words": "^3.0.4",
-    "discord.js": "^14.7.1",
-    "eventsource": "^2.0.2",
-    "express": "^4.18.2",
-    "moment": "^2.29.4",
-    "node-fetch": "^3.3.0",
-    "nodemon": "^2.0.20",
-    "shoukaku": "^3.2.2"
-  }
+  "bugs": {
+    "url": "https://github.com/Proximitynow19/gesu/issues"
+  },
+  "homepage": "https://github.com/Proximitynow19/gesu#readme",
+  "workspaces": [
+    "server",
+    "ui"
+  ]
 }
