Add shortlink workspace

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/Proximitynow19/gesu#readme",
   "workspaces": [
     "server",
-    "ui"
+    "ui",
+    "shortlink"
   ]
 }
