--- a/ui/package.json
+++ b/ui/package.json
@@ -16,6 +16,10 @@
   },
   "dependencies": {
     "@solidjs/router": "^0.5.1",
+    "moment": "^2.29.4",
+    "react-icons": "^4.7.1",
+    "socket.io-client": "^4.5.4",
+    "solid-icons": "^1.0.4",
     "solid-js": "^1.5.1"
   },
   "main": "index.js",
