--- a/ui/package.json
+++ b/ui/package.json
@@ -15,6 +15,8 @@
     "vite-plugin-solid": "^2.3.0"
   },
   "dependencies": {
+    "@motionone/solid": "^10.15.3",
+    "@solid-primitives/keyed": "^1.1.4",
     "@solidjs/router": "^0.5.1",
     "moment": "^2.29.4",
     "react-icons": "^4.7.1",
