--- a/ui/package.json
+++ b/ui/package.json
@@ -10,6 +10,7 @@
   },
   "license": "MIT",
   "devDependencies": {
+    "@types/d3": "^7.4.0",
     "typescript": "^4.8.2",
     "vite": "^3.0.9",
     "vite-plugin-solid": "^2.3.0"
@@ -18,6 +19,7 @@
     "@motionone/solid": "^10.15.3",
     "@solid-primitives/keyed": "^1.1.4",
     "@solidjs/router": "^0.5.1",
+    "d3": "^7.7.0",
     "moment": "^2.29.4",
     "react-icons": "^4.7.1",
     "socket.io-client": "^4.5.4",
